# riscv-npu

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.ai/: bootstrap.md  memory.md
.ai/completed/: phase10-gdb-stub.md  phase11-arrax-npu-instructions.md  phase12-library-api.md  phase2-elf.md  phase3-uart-syscalls.md  phase4-tui.md  phase6-mnist.md  phase7-transformer.md  phase9-cython-accel.md
.ai/specs/: phase1-rv32i.md  phase2-elf.md  phase3-uart-syscalls.md  phase4-tui.md  phase5-npu.md  phase6-mnist.md  phase7-transformer.md  phase8-polish.md
docs/: gdb.md  isa-reference.md  npu-design.md  performance.md
firmware/common/: Makefile  linker.ld  npu.h  npu_fp.h  start.s  syscalls.c
firmware/fibonacci/: Makefile  main.c
firmware/file_demo/: Makefile  main.c
firmware/fpu_test/: Makefile  main.c
firmware/hello/: Makefile  main.c
firmware/mnist/: Makefile  main.c  nn_runtime.c  nn_runtime.h
firmware/newton/: Makefile  main.c
firmware/npu_test/: Makefile  main.c
firmware/npu_vecops/: Makefile  main.c
firmware/sort/: Makefile  main.c
firmware/transformer/: Makefile  main.c  test_data.py  weights.h
firmware/uart-hello/: Makefile  main.c
scripts/: bench.py  mnist-debug.sh  transformer-debug.sh
src/riscv_npu/: __init__.py  __main__.py  cli.py  emulator.py
tests/: test_emulator.py
tests/cpu/: conftest.py  test_cpu.py  test_decode.py  test_decode_fpu.py  test_execute.py  test_fpu.py  test_registers.py
tests/devices/: test_npu.py  test_uart.py
tools/: assemble.py  export_transformer_weights.py  export_weights.py
(+75 files in other folders)
