[project]
name = "riscv-npu"
version = "0.1.0"
description = "RISC-V (RV32IM) emulator in Python with custom NPU instructions for neural network inference"
requires-python = ">=3.14"
dependencies = [
    "rich",
]

[project.optional-dependencies]
torch = [
    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riscv_npu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
